--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ footer div img {
     margin: 0 15px;
 }
 
-textarea    {
+textarea {
     font-size: 14px;
 }
 
@@ -42,52 +42,54 @@ textarea    {
     width: 100%;
 }
 
-#right-panel .manage-remove .icon-remove:hover   {
-    cursor:pointer;
+#right-panel .manage-remove .icon-remove:hover {
+    cursor: pointer;
 
 }
 
-
-
-#selected-experiment	{
-	width:100%;
+#selected-experiment {
+    width: 100%;
 
 }
 
-#selected-experiment #table3	{
-	max-width:100%;
+#selected-experiment #table3 {
+    max-width: 100%;
 }
-
-
 
 /*---------Table management view experiments-----------*/
 
-#experiment-results #zScores-container th, #zScores-container td	{
-	/*overflow-y:scroll;*/
-	max-width:100px;
+#experiment-results #zScores-container th, #zScores-container td {
+    /*overflow-y:scroll;*/
+    max-width: 100px;
 }
 
-
 #right-panel #experiment-results hr {
-   height: 0.5em;
+    height: 0.5em;
 
 }
 
 #delete-instruction {
-    margin:auto;
+    margin: auto;
 }
 
-#delete-instruction select  {
+#delete-instruction select {
     width: 400px;
-    overflow:scroll;
+    overflow: scroll;
     min-height: 400px;
 }
 
 #field-delete-instruction #submit-delete-instruction, #delete-instruction-dialog {
-    float:right;
-    margin:2px;
+    float: right;
+    margin: 2px;
 }
 
 .confirmon-box p {
     color: white !important;
+}
+
+/*------------------CATEGORY JUDGEMENT-------------*/
+
+.no-original {
+    margin-left: auto;
+    margin-right: auto;
 }
